--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #ECECEC;
+    background-color: rgb(0, 18, 181);
     color: #444444;
     padding: 0;
     margin: 0;
