--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@ h2 {
     font-style: italic;
 }
 
-.right {
+.left {
     display: block;
-    float: right;
+    float: left;
     width: auto;
 }
 
