--- a/style.css
+++ b/style.css
@@ -1,21 +1,23 @@
-
+/*.index is for the whole page*/
 .index {
     font-family: 'Lucida Sans', Verdana, sans-serif;
-    background-color: #000869;
+    background-color: #000000;
     color: #ffffff;
-    border: dotted 7px black;
+    border: solid 7px black;
 }
 
 .page2 {
     font-family: 'Lucida Sans', Verdana, sans-serif;
     background-color: #000869;
     color: #ffffff;
-    border: dotted 5px black;
+    border: solid 5px black;
   }
 
 h2 {
     font-style: italic;
 }
+
+/*.left is for the image*/
 
 .left {
     display: block;
@@ -39,38 +41,3 @@ footer {
     right: 0;
     background-color: black;
 }
-
-/* Style inputs with type="text", select elements and textareas */
-input[type=text], select, textarea {
-    width: 100%; /* Full width */
-    padding: 12px; /* Some padding */ 
-    border: 1px solid #ccc; /* Gray border */
-    border-radius: 4px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 6px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
-  }
-  
-  /* Style the submit button with a specific background color etc */
-  input[type=submit] {
-    background-color: #04AA6D;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  /* When moving the mouse over the submit button, add a darker green color */
-  input[type=submit]:hover {
-    background-color: #45a049;
-  }
-  
-  /* Add a background color and some padding around the form */
-  .container {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-  }
-
