--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
 .center {
   text-align: center;
+  float: center;
   }
 
 .lefttext {
@@ -35,6 +36,11 @@ th, td {
     text-align:center;
     border:1px solid black;
     padding:5px 
+}
+
+head {
+    background-colour: black;
+    colour: #ffffff;
 }
 
 footer {
