--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ head {
 }
 
 body {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
     background-colour: black;
     colour: #ffffff;
 }
