--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*.index is for the whole page*/
 .title {
     font-family: 'Lucida Sans', Verdana, sans-serif;
-    background-color: #000000;
+    background-color: black;
     color: #ffffff;
     border: solid 7px black;
     text-align: justify;
