--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@ h2 {
 
 
 body {
-    background-colour: black;
-    colour: #ffffff;
+    background-color: black;
+    color: #ffffff;
     left: 5;
     float: center;
 }
