--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     background-color: black;
     color: #fff;
     border: solid 7px black;
-    text-align: justify;
+    text-align: center;
     float: center;
 }
 
