--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*.index is for the whole page*/
-.title {
+title {
     font-family: 'Lucida Sans', Verdana, sans-serif;
     background-color: black;
     color: #fff;
