--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-/*.index is for the whole page*/
+{
+    box-sizing: border-box;
+    margin: 0;
+    border: 0;
+    margin-block: 0;
+    margin-inline: 0;
+
 title {
     font-family: 'Lucida Sans', Verdana, sans-serif;
     background-color: black;
