--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ title {
 
 body {
     background-color: black;
-    background-image: url("Images/IMG-3281.IMG")
+    background-image: url("Images/IMG-3280.PNG")
     color: #fff;
     left: 5;
     float: center;
