--- a/style.css
+++ b/style.css
@@ -29,8 +29,7 @@ body {
     background-color: black;
     background-image: url("Images/IMG-3280.PNG");
     color: #fff;
-    left: 5;
-    float: center;
+    position: fixed;
     text-align: center;
 }
 
