--- a/style.css
+++ b/style.css
@@ -78,17 +78,15 @@ ul {
 
 /* Create two equal columns that floats next to each other */
 .column1 {
-  float: left;
+  float: right;
   width: 25%;
   padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
 }
 
 .column2 {
   float: left;
   width: 75%;
   padding: 10px;
-  height: 300px;
 }
 
 /* Clear floats after the columns */
