--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   padding: 4rem;
 }
 
-title {
+.title {
     font-family: 'Lucida Sans', Verdana, sans-serif;
     background-color: black;
     color: #fff;
