--- a/style.css
+++ b/style.css
@@ -19,9 +19,8 @@
 }
 
 .footer {
-  left: 0;
-  right: 0;
-  bottom: 0;
+  text-size: 10px;
+  width: auto;
   margin: 0 2rem;
   background: black;
   color: #fff;
