--- a/style.css
+++ b/style.css
@@ -70,11 +70,16 @@ h4 {
 }
 
 ul {
-    text-align: left;
+    /*text-align: left;*/
     padding-left: 0%;
 }
 
 li {
     padding-left: 0%;
     font-size: 25px;
+}
+
+table {
+  text-align: center;
+  align-content: center;
 }
