--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin:0;
   padding:0;
   box-sizing: border-box;
+  word-break: white-space;
 }
 
 html {
@@ -34,7 +35,7 @@ html {
 }
 
 .footer {
-  font-size: 15rem;
+  font-size: 1rem;
   background: black;
   color: #fff;
   text-align: center;
@@ -46,6 +47,7 @@ body {
   background-image: url("Images/IMG-3280.PNG");
   text-align: center;
   width: 100%;
+  font-size: 1rem;
 }
 
 a:link {
@@ -68,11 +70,19 @@ a:visited {
 }
 
 h1 {
-    font-size: 50px;
+  font-size: 2.1rem;
+}
+
+h2 {
+ font-size: 1.9rem;
+}
+
+h3 {
+ font-size: 1.6rem;
 }
 
 h4 {
-  font-size: 25px;
+ font-size: 1.4rem;
 }
 
 ul {
@@ -82,11 +92,11 @@ ul {
 
 li {
     padding-left: 0%;
-    font-size: 25px;
+    font-size: 1.2rem;
 }
 
 table {
   text-align: center;
   align-content: center;
-  width: 100%;
+  max-width: 100%;
 }
