--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
 *{
-  margin:0;
-  padding:0;
   box-sizing: border-box;
   word-break: white-space;
 }
@@ -45,9 +43,10 @@ html {
 body {
   background-color: black;
   background-image: url("Images/IMG-3280.PNG");
-  text-align: center;
-  width: 100%;
   font-size: 1rem;
+  margin:0;
+  padding:0;
+  max-width: 100vw;
 }
 
 a:link {
