--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@ html {
   overflow-x: hidden;
 }
 
+@media screen and (max-width: 767px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
+}
+
 .cell {
   color: white;
   font-size: 3rem;
