--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ html {
   color: #fff;
   text-align: center;
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5em 0;
 }
 
 body {
@@ -105,3 +109,4 @@ table {
   align-content: center;
   max-width: 100%;
 }
+
