--- a/style.css
+++ b/style.css
@@ -32,6 +32,12 @@ html {
   /*was 4*/
 }
 
+@media screen and (max-width: 767px) {
+  .cell {
+    text-align: unset;
+  }
+}
+
 .title {
     font-family: 'Lucida Sans', Verdana, sans-serif;
     color: #fff;
@@ -58,6 +64,7 @@ body {
   padding:0;
   max-width: 100vw;
 }
+
 
 a:link {
   color: #00B3FF;
