--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ html {
 
 @media screen and (max-width: 767px) {
   .cell {
-    text-align: unset;
+    text-align: left;
+    padding: 1.75rem;
   }
 }
 
