--- a/style.css
+++ b/style.css
@@ -15,12 +15,14 @@ html {
   grid-template-columns: 1fr 4fr;
   gap: 1rem;
   max-width: 100%;
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
 }
+
 
 @media screen and (max-width: 767px) {
   .container {
     grid-template-columns: 1fr;
+    overflow-x: hidden;
   }
 }
 
