--- a/style.css
+++ b/style.css
@@ -134,3 +134,12 @@ table {
   padding: 1em;
   column-gap: 1em;
 }
+
+@media screen and (max-width: 767px) {
+  
+table {
+  text-align: left;
+  align-content: left;
+}
+
+}
