--- a/style.css
+++ b/style.css
@@ -104,17 +104,26 @@ h3 {
   h1 {
     width: fit-content;
     height: fit-content;
+    font-size: 1.9rem;
   }
 
 
   h2 {
     width: fit-content;
     height: fit-content;
+    font-size: 1.6rem;
   }
 
   h3 {
     width: fit-content;
     height: fit-content;
+    font-size: 1.3rem;
+  }
+
+  h4 {
+    width: fit-content;
+    height: fit-content;
+    font-size: 1rem;
   }
 }
 
