--- a/style.css
+++ b/style.css
@@ -146,7 +146,8 @@ h4 {
 
 .cell {
     text-align: left;
-    padding: 1.75rem;
+    padding: 1rem; /*was 1.7*/
+    align-content: left;
   }
 
 }
