--- a/style.css
+++ b/style.css
@@ -15,8 +15,9 @@ html {
   grid-template-columns: 1fr 4fr;
   gap: 1rem;
   max-width: 100%;
-  /*overflow-x: hidden;*/
 }
+
+
 
 .cell {
   color: white;
@@ -28,8 +29,8 @@ html {
 .title {
     font-family: 'Lucida Sans', Verdana, sans-serif;
     color: #fff;
-    text-align: top;
-}
+    text-align: top, center;
+  }
 
 .logo {
   max-width: 40%;
@@ -94,11 +95,6 @@ h4 {
  font-size: 1.4rem;
 }
 
-li {
-    font-size: 1.2rem;
-    padding: 0.15em 0;
-}
-
 table {
   text-align: center;
   align-content: center;
@@ -158,3 +154,52 @@ h4 {
 /*Samsung*/
 
 /*Wide PC*/
+
+.cell-1{
+  display: flex;
+}
+
+.cell-2{
+  display: flex;
+  justify-content: center;
+}
+
+.cell-3{
+  display: flex;
+  justify-content: left;
+}
+
+.cell-4{
+  display: flex;
+  justify-content: center;
+  width: auto;
+  height: auto;
+  }
+
+.cell-5{
+  display: flex;
+  justify-content: left;
+  font-size: 2rem;
+  width: auto;
+  height: auto;
+}
+
+.cell-6{
+  display: flex;
+  justify-content: top;
+  font-size: 2rem;
+  width: auto;
+  height: auto;
+}
+
+.cell-7{
+  display: flex;
+  justify-content: bottom;
+  font-size: 2rem;
+}
+
+.cell-8{
+  display: flex;
+  justify-content: center;
+  font-size: 2rem;
+}
