--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ html {
   grid-template-columns: 1fr 4fr;
   gap: 1rem;
   max-width: 100%;
+  overflow-x: hidden;
 }
 
 
@@ -105,7 +106,7 @@ table {
 
 
 /*IPHONE SE*/
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 825px) {
   
 table {
   text-align: left;
@@ -129,6 +130,7 @@ h4 {
   font-size: 1rem;
 }
 
+
 .logo {
     max-width: 25%;
     width: auto;
@@ -147,13 +149,56 @@ h4 {
     align-content: left;
   }
 
-}
+  .cell-1{
+    display: flex;
+  }
+  
+  .cell-2{
+    display: flex;
+    justify-content: center;
+  }
+  
+  .cell-3{
+    display: flex;
+    justify-content: left;
+  }
+  
+  .cell-4{
+    display: flex;
+    justify-content: center;
+    width: auto;
+    height: auto;
+    }
+  
+  .cell-5{
+    display: flex;
+    justify-content: left;
+    font-size: 1rem;
+    width: auto;
+    height: auto;
+  }
+  
+  .cell-6{
+    display: flex;
+    justify-content: left;
+    font-size: 1rem;
+    width: auto;
+    height: auto;
+  }
+  
+  .cell-7{
+    display: flex;
+    justify-content: center;
+    font-size: 1rem;
+  }
+  
+  .cell-8{
+    display: flex;
+    justify-content: center;
+    font-size: 1rem;
+  }
 
-/*Tablet*/
-
-/*Samsung*/
-
-/*Wide PC*/
+};
 
 .cell-1{
   display: flex;
@@ -179,27 +224,113 @@ h4 {
 .cell-5{
   display: flex;
   justify-content: left;
-  font-size: 2rem;
+  font-size: 1rem;
   width: auto;
   height: auto;
 }
 
 .cell-6{
   display: flex;
-  justify-content: top;
-  font-size: 2rem;
+  justify-content: left;
+  font-size: 1rem;
   width: auto;
   height: auto;
 }
 
 .cell-7{
   display: flex;
-  justify-content: bottom;
-  font-size: 2rem;
+  justify-content: center;
+  font-size: 1rem;
 }
 
 .cell-8{
   display: flex;
   justify-content: center;
-  font-size: 2rem;
-}
+  font-size: 1rem;
+};
+
+@media screen and (max-width: 775px) {
+  
+  table {
+    text-align: left;
+    align-content: left;
+  }
+  
+  h1 {
+    font-size: 1.9rem;
+  }
+  
+  
+  h2 {
+    font-size: 1.6rem;
+  }
+  
+  h3 {
+    font-size: 1.3rem;
+  }
+  
+  h4 {
+    font-size: 1rem;
+  }
+  
+  .logo {
+      max-width: 25%;
+      width: auto;
+      max-height: auto;
+      align-self: center;
+    }
+  
+  .container {
+      grid-template-columns: 1fr;
+      overflow-x: hidden;
+    }
+  
+  .cell {
+      text-align: left;
+      padding: 1rem; /*was 1.7*/
+      align-content: left;
+    }
+  
+  .cell-1{
+    display: flex;
+  }
+  
+  .cell-2{
+    display: flex;
+    justify-content: center;
+  }
+  
+  .cell-3{
+    display: flex;
+    justify-content: left;
+  }
+  
+  .cell-4{
+    display: flex;
+    justify-content: center;
+    }
+  
+  .cell-5{
+    display: flex;
+    justify-content: left;
+    font-size: 1rem;
+  }
+  
+  .cell-6{
+    display: flex;
+    justify-content: left;
+    font-size: 1rem;
+  }
+  
+  .cell-7{
+    display: flex;
+    justify-content: center;
+    font-size: 1rem;
+  }
+  
+  .cell-8{
+    display: flex;
+    justify-content: center;
+    font-size: 1rem;
+  }
+};
