--- a/style.css
+++ b/style.css
@@ -188,13 +188,13 @@ h4 {
   
   .cell-7{
     display: flex;
-    justify-content: center;
+    justify-content: left;
     font-size: 1rem;
   }
   
   .cell-8{
     display: flex;
-    justify-content: center;
+    justify-content: left;
     font-size: 1rem;
   }
 
@@ -207,11 +207,12 @@ h4 {
 .cell-2{
   display: flex;
   justify-content: center;
+  text: wrap;
 }
 
 .cell-3{
   display: flex;
-  justify-content: left;
+  justify-content: center;
 }
 
 .cell-4{
