--- a/style.css
+++ b/style.css
@@ -197,6 +197,11 @@ h4 {
     justify-content: left;
     font-size: 1rem;
   }
+  
+.footer:{
+  font-size: 1rem;
+  }
+  
 
 };
 
@@ -285,4 +290,9 @@ h4 {
     justify-content: center;
     font-size: 1rem;
   }
+  
+.footer:{
+  font-size: 1rem;
+  }
+  
 };
