--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ html {
 body {
   background-color: black;
   background-image: url("Images/IMGbackground.jpeg");
-  background-width: 100vw;
+  background-size: 100vw;
   font-size: 1rem;
   margin:0;
   padding:0;
