--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
   background-color: black;
   background-image: url("Images/IMGbackground.jpeg");
   background-size: 100vw;
+  width: 100vw;
   font-size: 1rem;
   margin:0;
   padding:0;
