--- a/style.css
+++ b/style.css
@@ -119,14 +119,6 @@ table {
 /*IPHONE SE*/
 @media screen and (max-width: 825px) {
   
-.title1 {
-text-align: top, center;
-  }
-  
-.title2 {
-text-align: bottom, center;
-  }
-  
 table {
   text-align: center;
   align-content: left;
@@ -173,20 +165,19 @@ h4 {
   
   .cell-2{
     display: flex;
-    justify-content: center;
     padding: 0rem;
     
     .title1 {
     font-family: 'Lucida Sans', Verdana, sans-serif;
     color: #fff;
-    text-align: top, left;
+    justify-content: top, left;
  
   }
 
 .title2 {
     font-family: 'Lucida Sans', Verdana, sans-serif;
     color: #fff;
-    text-align: top, right;
+    justify-content: top, right;
   }
   }
   
