--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ html {
   text-align: center;
   padding: 2rem;
 }
- .cell-2{
   
 .title1 {
     font-family: 'Lucida Sans', Verdana, sans-serif;
@@ -43,7 +42,7 @@ html {
     display: flex;
     justify-content: center;
   }
-}
+
 
 .logo {
   max-width: 40%;
@@ -169,6 +168,21 @@ h4 {
   
   .cell-2{
     display: flex;
+  }
+  
+  .title1 {
+    font-family: 'Lucida Sans', Verdana, sans-serif;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+ 
+  }
+
+.title2 {
+    font-family: 'Lucida Sans', Verdana, sans-serif;
+    color: #fff;
+    display: flex;
+    justify-content: center;
   }
   
   .cell-3{
