--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ h4 {
     color: #fff;
     display: flex;
     justify-content: center;
+    padding: 0.5rem;
  
     }
 
@@ -182,6 +183,7 @@ h4 {
     color: #fff;
     display: flex;
     justify-content: center;
+    padding: 0.5rem;
     }
    
  }
