--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
 
 
 .container {
-  margin: 2rem;
+  margin: 0rem;
   margin-bottom: 0rem;
   display: grid;
   grid-template-columns: 1fr 4fr;
@@ -25,11 +25,6 @@ html {
   font-size: 3rem;
   text-align: center;
   padding: 2rem;}
-
- .cell-1{
-  display: flex;
-  justify-content: left;
- }
 
  .title1 {
     font-family: 'Lucida Sans', Verdana, sans-serif;
@@ -51,6 +46,8 @@ html {
  .cell-3{
   display: flex;
   justify-content: center;
+  width: auto;
+  height: auto;
 }
 
 .cell-4{
@@ -66,8 +63,36 @@ html {
     width: auto;
     height: auto;
 }
-  
-.cell-6{
+
+.table{
+  display: flex;
+  text-justify: distribute;
+  flex-wrap: nowrap;
+}
+
+.row-1{
+  display: flex;
+  justify-content: center;
+  width: auto;
+  height: auto;
+}
+
+.row-2{
+  display: flex;
+  justify-content: center;
+  width: auto;
+  height: auto;
+  padding-bottom: 1rem;
+}
+
+.row-3{
+  display: flex;
+  justify-content: center;
+  width: auto;
+  height: auto;
+}
+
+.row-4{
   display: flex;
   justify-content: center;
   width: auto;
@@ -75,12 +100,14 @@ html {
 }
 
 
-
-
 .logo {
   max-width: 40%;
   width: auto;
   max-height: auto;
+  padding: 0%;
+  margin: 0%;
+  gap: 0%;
+  justify-content: left;
   
 }
 
@@ -90,10 +117,11 @@ html {
   color: #fff;
   text-align: center;
   width: 100%;
-  display: flex;
+  display: grid;
   align-items: center;
   justify-content: center;
   padding: 0.25em 0;
+  place-items: bottom;
 }
 
 body {
@@ -109,22 +137,22 @@ body {
 
 
 a:link {
-  color: #00B3FF;
+  color: #ff0000;
 }
 
 
 /* selected link */
 a:active {
-  color: #269300;
+  color: #ff0000;
 }
 
 a:hover {
-  color: #00B3FF;
+  color: #ff0000;
 }
 
 /* visited link */
 a:visited {
-  color: #269300;
+  color: #ff0000;
 }
 
 h1 {
@@ -143,26 +171,12 @@ h4 {
  font-size: 1.4rem;
 }
 
-table {
-  text-align: center;
-  align-content: center;
-  max-width: 100%;
-  padding: 1em;
-  column-gap: 4em;
-}
-
-
-
 
 
 
 /*IPHONE SE*/
 @media screen and (max-width: 825px) {
   
-table {
-  text-align: center;
-  align-content: left;
-}
 
 h1 {
   font-size: 1.5rem;
@@ -242,16 +256,7 @@ h4 {
       height: auto;
   }
     
-  .cell-6{
-    display: flex;
-    justify-content: center;
-    width: auto;
-    height: auto;
-  }
-  
 .footer{
   font-size: 1rem;
-  justify-content: center;
   }
-
 };
