--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html {
   display: grid;
   grid-template-columns: 1fr 4fr;
   gap: 1rem;
-  max-width: 100%;
+  max-width: 100vw;
   overflow-x: hidden;
 }
 
@@ -32,6 +32,8 @@ html {
     display: flex;
     justify-content: center;
     flex-wrap: nowrap;
+    margin-top: 2.5rem;
+    margin-left: 7.5rem;
   }
 
   .title2 {
@@ -40,75 +42,39 @@ html {
     display: flex;
     justify-content: center;
     flex-wrap: nowrap;
-  };
-
+    margin-top: 2.5rem;
+    margin-left: 7.5rem;
+  }
     
- .cell-3{
-  display: flex;
-  justify-content: center;
+.cell-3{
+  align-self: center;
   width: auto;
   height: auto;
+  margin: 0%;
 }
 
 .cell-4{
-  display: flex;
-  justify-content: center;
+  align-self: center;
   width: auto;
   height: auto;
+  grid-column: 1 / 3;
   }
 
 .cell-5{
-    display: flex;
-    justify-content: center;
+    align-self: center;
     width: auto;
     height: auto;
+    margin: 0%;
+    padding-bottom: 10rem;
+    grid-column: 1 / 3;
 }
 
-.table{
-  display: flex;
-  text-justify: distribute;
-  flex-wrap: nowrap;
-}
-
-.row-1{
-  display: flex;
-  justify-content: center;
-  width: auto;
-  height: auto;
-}
-
-.row-2{
-  display: flex;
-  justify-content: center;
-  width: auto;
-  height: auto;
-  padding-bottom: 1rem;
-}
-
-.row-3{
-  display: flex;
-  justify-content: center;
-  width: auto;
-  height: auto;
-}
-
-.row-4{
-  display: flex;
-  justify-content: center;
-  width: auto;
-  height: auto;
-}
-
-
-.logo {
+.cell-1 {
   max-width: 40%;
   width: auto;
   max-height: auto;
-  padding: 0%;
-  margin: 0%;
-  gap: 0%;
-  justify-content: left;
-  
+  display: flex;
+  justify-content: left;  
 }
 
 .footer {
@@ -116,19 +82,17 @@ html {
   background: black;
   color: #fff;
   text-align: center;
-  width: 100%;
+  width: 100vw;
   display: grid;
-  align-items: center;
-  justify-content: center;
   padding: 0.25em 0;
-  place-items: bottom;
+  position: fixed;
+  bottom: 0;
 }
 
 body {
   background-color: black;
   background-image: url("Images/IMGbackground.jpeg");
   background-size: 100vw;
-  width: 100vw;
   font-size: 1rem;
   margin:0;
   padding:0;
@@ -139,21 +103,18 @@ body {
 a:link {
   color: #ff0000;
 }
-
-
 /* selected link */
 a:active {
   color: #ff0000;
 }
-
 a:hover {
   color: #ff0000;
 }
-
 /* visited link */
 a:visited {
   color: #ff0000;
 }
+
 
 h1 {
   font-size: 2.1rem;
@@ -175,7 +136,7 @@ h4 {
 
 
 /*IPHONE SE*/
-@media screen and (max-width: 825px) {
+@media screen and (max-width: 375px) {
   
 
 h1 {
@@ -196,10 +157,12 @@ h4 {
 }
 
 
-.logo {
+.cell-1 {
     max-width: 25%;
     width: auto;
     max-height: auto;
+    display: flex;
+    justify-content: center;
     align-self: center;
   }
 
@@ -211,10 +174,6 @@ h4 {
 .cell {
     text-align: left;
     padding: 1.7rem;
-  }
-
-  .cell-1{
-    display: flex;
   }
   
   .title1 {
@@ -239,7 +198,8 @@ h4 {
     
   .cell-3{
     display: flex;
-    justify-content: left;
+    justify-content: center;
+    grid-column: 1 / 3;
   }
   
   .cell-4{
@@ -247,16 +207,38 @@ h4 {
     justify-content: center;
     width: auto;
     height: auto;
+    grid-column: 1 / 3;
     }
 
   .cell-5{
-      display: flex;
-      justify-content: center;
-      width: auto;
-      height: auto;
+    display: flex;
+    justify-content: center;
+    width: auto;
+    height: auto;
+    grid-column: 1 / 3;
   }
     
 .footer{
   font-size: 1rem;
   }
 };
+
+/*IPHONE XR*/
+@media screen and (max-width: 414px) {
+}
+
+/*IPHONE 12 Pro*/
+@media screen and (max-width: 390px) {
+}
+
+/*Surface Pro 7*/
+@media screen and (max-width: 1368px) {
+  /*No changes required*/
+}
+
+/*Nest Hub*/
+@media screen and (max-width: 1024px) {
+  /*No changes required*/
+}
+
+/* No changes needed for Ipad Air & Ipad Mini*/
