--- a/style.css
+++ b/style.css
@@ -10,21 +10,12 @@ html {
 
 
 .container {
-  margin: 2rem;
+  margin: 0rem;
   margin-bottom: 0rem;
   display: grid;
-  grid-template-areas: 
-  'cell-1 cell-2' 
-  'cell-1 cell-2'
-  'cell-3 cell-3'
-  'cell-4 cell-4'
-  'cell-5 cell-5'
-  'cell-6 cell-6'
-  'cell-7 cell-7'
-  'cell-8 cell-8';
-
+  grid-template-columns: 1fr 4fr;
   gap: 1rem;
-  max-width: 100%;
+  max-width: 100vw;
   overflow-x: hidden;
 }
 
@@ -35,31 +26,55 @@ html {
   text-align: center;
   padding: 2rem;}
 
- .cell-1{
-  display: flex;
-  justify-content: left;
- }
-
- .cell-2{
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+ .title1 {
+    font-family: 'Lucida Sans', Verdana, sans-serif;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    margin-top: 2.5rem;
+    margin-left: 7.5rem;
   }
 
+  .title2 {
+    font-family: 'Lucida Sans', Verdana, sans-serif;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    margin-top: 2.5rem;
+    margin-left: 7.5rem;
+  }
+    
+.cell-3{
+  align-self: center;
+  width: auto;
+  height: auto;
+  margin: 0%;
+}
 
- .cell-3{
-  display: flex;
-  justify-content: left;
- };
+.cell-4{
+  align-self: center;
+  width: auto;
+  height: auto;
+  grid-column: 1 / 3;
+  }
 
+.cell-5{
+    align-self: center;
+    width: auto;
+    height: auto;
+    margin: 0%;
+    padding-bottom: 10rem;
+    grid-column: 1 / 3;
+}
 
-
-
-.logo {
+.cell-1 {
   max-width: 40%;
   width: auto;
   max-height: auto;
-  
+  display: flex;
+  justify-content: left;  
 }
 
 .footer {
@@ -67,18 +82,17 @@ html {
   background: black;
   color: #fff;
   text-align: center;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 100vw;
+  display: grid;
   padding: 0.25em 0;
+  position: fixed;
+  bottom: 0;
 }
 
 body {
   background-color: black;
   background-image: url("Images/IMGbackground.jpeg");
   background-size: 100vw;
-  width: 100vw;
   font-size: 1rem;
   margin:0;
   padding:0;
@@ -87,23 +101,20 @@ body {
 
 
 a:link {
-  color: #00B3FF;
+  color: #ff0000;
 }
-
-
 /* selected link */
 a:active {
-  color: #269300;
+  color: #ff0000;
 }
-
 a:hover {
-  color: #00B3FF;
+  color: #ff0000;
 }
-
 /* visited link */
 a:visited {
-  color: #269300;
+  color: #ff0000;
 }
+
 
 h1 {
   font-size: 2.1rem;
@@ -121,26 +132,12 @@ h4 {
  font-size: 1.4rem;
 }
 
-table {
-  text-align: center;
-  align-content: center;
-  max-width: 100%;
-  padding: 1em;
-  column-gap: 4em;
-}
-
-
-
 
 
 
 /*IPHONE SE*/
-@media screen and (max-width: 825px) {
+@media screen and (max-width: 375px) {
   
-table {
-  text-align: center;
-  align-content: left;
-}
 
 h1 {
   font-size: 1.5rem;
@@ -160,10 +157,12 @@ h4 {
 }
 
 
-.logo {
+.cell-1 {
     max-width: 25%;
     width: auto;
     max-height: auto;
+    display: flex;
+    justify-content: center;
     align-self: center;
   }
 
@@ -176,21 +175,31 @@ h4 {
     text-align: left;
     padding: 1.7rem;
   }
-
-  .cell-1{
-    display: flex;
-  }
   
-  .cell-2{
+  .title1 {
+    font-family: 'Lucida Sans', Verdana, sans-serif;
+    color: #fff;
     display: flex;
-    flex-wrap: nowrap;
-  }
+    justify-content: top;
+    padding: 0.5rem;
+    flex-wrap: wrap;
+ 
+    }
 
+    .title2 {
+    font-family: 'Lucida Sans', Verdana, sans-serif;
+    color: #fff;
+    display: flex;
+    justify-content: bottom;
+    padding: 0.5rem;
+    flex-wrap: wrap;
+    }
   
     
   .cell-3{
     display: flex;
-    justify-content: left;
+    justify-content: center;
+    grid-column: 1 / 3;
   }
   
   .cell-4{
@@ -198,30 +207,38 @@ h4 {
     justify-content: center;
     width: auto;
     height: auto;
+    grid-column: 1 / 3;
     }
-  
-  .cell-6{
+
+  .cell-5{
     display: flex;
-    justify-content: left;
+    justify-content: center;
     width: auto;
     height: auto;
+    grid-column: 1 / 3;
   }
-  
-  .cell-7{
-    display: flex;
-    justify-content: left;
-    font-size: 1rem;
-  }
-  
-  .cell-8{
-    display: flex;
-    justify-content: left;
-    font-size: 1rem;
-  }
-  
+    
 .footer{
   font-size: 1rem;
-  justify-content: center;
   }
-
 };
+
+/*IPHONE XR*/
+@media screen and (max-width: 414px) {
+}
+
+/*IPHONE 12 Pro*/
+@media screen and (max-width: 390px) {
+}
+
+/*Surface Pro 7*/
+@media screen and (max-width: 1368px) {
+  /*No changes required*/
+}
+
+/*Nest Hub*/
+@media screen and (max-width: 1024px) {
+  /*No changes required*/
+}
+
+/* No changes needed for Ipad Air & Ipad Mini*/
