--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body{
@@ -14,6 +15,7 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
+  margin-bottom: 4rem;
 }
 
 .navbarContainer {
@@ -33,7 +35,6 @@ body{
 }
 
 .navbar {
-  background-color: gray;
   height: 5rem;
 }
 
@@ -47,7 +48,7 @@ body{
   text-align: center;
   justify-items: center;
   justify-content: center;
-  align-items: center;
+  align-items: center; 
 }
 
 .navbar ul li {
@@ -64,6 +65,10 @@ body{
 }
 
 .navbar ul li a:active {
+  color: white;
+}
+
+.navbar ul li a:default {
   color: white;
 }
 
@@ -92,12 +97,15 @@ body{
   justify-self: center;
 }
 
-footer{
+.footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: white;
   text-align: center;
-  position: absolute;
-  bottom: .75rem;
-  width: 100vw;
-  font-size: 1.75rem;
+  background-color: black;
+  font-size: 2.75rem;;
 }
 
 /*IPHONE SE*/
