--- a/style.css
+++ b/style.css
@@ -1,151 +1,33 @@
-* {
-  box-sizing: border-box;
-  word-break: white-space;
-  margin: 0;
-  padding: 0;
+.navbarContainer{
+  display: flex;
 }
 
-html {
-  scroll-behavior: smooth;
-  overflow-x: hidden;
+.navbar{
+  display: flex;
+}
+
+.Logo{
+  display: flex;
+}
+
+.display{
+  display: flex;
+}
+
+.contactsInfo{
+  display: flex;
 }
 
 body{
-  background-image: url(/Images/IMGbackground.jpeg);
+  display: flex;
   background-repeat: no-repeat;
   background-size: cover;
-  color: white;
-  margin-bottom: 4rem;
 }
 
-.navbarContainer {
-  position: relative;
+h1{
+  font-size: 8vw;
 }
 
-.rightLogo img {
-  height: 10rem;
-  position: absolute;
-  top: 0;
-}
-
-.rightLogo {
-  float: right;
-  margin-right: 10rem;
-}
-
-.navbar {
-  height: 5rem;
-}
-
-.navbar ul {
-  flex-grow: 1;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  gap: 1rem;
-  list-style: none;
-  text-align: center;
-  justify-items: center;
-  justify-content: center;
-  align-items: center; 
-}
-
-.navbar ul li {
-  font-size: 2rem;
-  
-}
-
-.navbar ul li a:visited {
-  color: white;
-}
-
-.navbar ul li a:hover {
-  color: rgb(8, 146, 156);
-}
-
-.navbar ul li a:active {
-  color: white;
-}
-
-.navbar ul li a:default {
-  color: white;
-}
-
-.navbar ul li a{
-  color: white;
-}
-
-
-.heroSection {
-  margin-top: 2rem;
-}
-
-.heroSection h1 {
-  font-size: 3rem;
-  text-align: center;
-}
-
-.footer{
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  color: white;
-  text-align: center;
-  background-color: black;
-  font-size: 2.75rem;
-}
-
-/*IPHONE SE*/
-@media screen and (max-width: 428px){
-  .rightLogo img {
-  height: 8rem;
-  position: fixed;
-  top: 0rem;
-  margin-top: 0rem;
-}
-
-.rightLogo {
-  float: right;
-  margin-right: 8rem;
-}
-
-.navbar {
-  height: 5rem;
-}
-  
-  .navbar ul {
-    flex-grow: 1;
-    padding: 0;
-    margin-top: 10rem;
-    display: flex;
-    gap: 1rem;
-    list-style: none;
-    text-align: center;
-    justify-items: center;
-    justify-content: center;
-    align-items: center; 
-    
-  }
-
-  .navbar ul li {
-    font-size: 1.6rem;
-    
-  }
-  
-  .heroSection h1 {
-    font-size: 3rem;
-    text-align: center;
-  }
-body{
-  background-repeat: repeat;
-}
-}
-
-/*PC's that are built dif*/
-@media screen and (max-width: 1152px) {
-    body{
-    background-repeat: repeat;
-  }
-  
+p{
+  font-size: 2vw;
 }
