--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body{
   background-repeat: none;
   background-size: cover;
   margin-bottom: 10vw;
-  background-image: url(/Images/bground.avif);
+  background-image: url(/Images/bground.png);
   
 }
 
