--- a/style.css
+++ b/style.css
@@ -211,6 +211,31 @@ h1{
    text-decoration: none;
  }
 
+.contentInfo{
+  /*display: flex;*/
+  justify-content: center;
+  text-align: center;
+  margin: 0;
+  font-size: 3vw;
+  color: white;
+}
+
+.contentInfo ul{
+  list-style: none;
+  max-height: 6vw;
+}
+
+.contentInfo ul li a{
+ color: white;
+ text-decoration: none;
+}
+
+.contentInfo ul li a:hover{
+  color: blue;
+  text-decoration: none;
+}
+
+
 
 @media (max-width: 600px) {
   body{
